--- a/backend/views/user/blogDetails.ejs
+++ b/backend/views/user/blogDetails.ejs
@@ -471,13 +471,15 @@
           <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
 Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
           <p class="m-0">
-           <a style="color: white;" href="mailto:stayrareinfo@gmail.com">✉️ <strong class="fw-medium">stayrareinfo@gmail.com</strong></a>
+           <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
           <p>
-           <a style="color: white;" href="tel:+911234567890"> <svg width="16" height="16" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-  <path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z"/>
-</svg>
-<strong class="fw-medium">+91 1234 567 890</strong></a>
+<a style="color: white;" href="tel:+916238669487"> <svg width="16" height="16" viewBox="0 0 24 24"
+                fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z" />
+              </svg>
+              <strong class="fw-medium">+91 62 38669 487</strong></a>
           </p>
          
 
