--- a/backend/views/user/contact.ejs
+++ b/backend/views/user/contact.ejs
@@ -447,7 +447,7 @@
             
             <div class="contact-grid-layout d-flex justify-content-around flex-wrap">
                 <!-- Email Card -->
-                <div class="contact-item-card">
+              <a href="mailto:stayrareofficial@gmail.com"> <div class="contact-item-card">
                     <div class="contact-icon-container">
                         <svg class="contact-svg-icon" viewBox="0 0 24 24">
                             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
@@ -455,19 +455,19 @@
                         </svg>
                     </div>
                     <h3 class="contact-label-text">E-mail Address</h3>
-                    <p class="contact-value-info">stayrare@gmail.com</p>
-                </div>
+                    <p class="contact-value-info">stayrareofficial@gmail.com</p>
+                </div></a> 
 
                 <!-- Phone Card -->
-                <div class="contact-item-card">
+              <a href="tel:+916238669487"> <div class="contact-item-card">
                     <div class="contact-icon-container">
                      <svg class="contact-svg-icon" width="36" height="36" viewBox="0 0 24 24" fill="#495057" xmlns="http://www.w3.org/2000/svg">
   <path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z"/>
 </svg>
                     </div>
                     <h3 class="contact-label-text">Phone Number</h3>
-                    <p class="contact-value-info">+91 1234 567 890</p>
-                </div>
+                    <p class="contact-value-info">+91 62 38669 487</p>
+                </div></a> 
 
                 <!-- Address Card -->
                 <div class="contact-item-card">
@@ -525,13 +525,15 @@ Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
           <p class="footer-address">TC 56/2042 , Manchadi, Anthivilakku, <br>
 Karumom PO, Thiruvananthapuram, <br> Kerala – 695002</p>
           <p class="m-0">
-           <a style="color: white;" href="mailto:stayrareinfo@gmail.com">✉️ <strong class="fw-medium">stayrareinfo@gmail.com</strong></a>
+           <a style="color: white;" href="mailto:stayrareofficial@gmail.com">✉️ <strong class="fw-medium">stayrareofficial@gmail.com</strong></a>
           </p>
           <p>
-           <a style="color: white;" href="tel:+911234567890"> <svg width="16" height="16" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-  <path d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z"/>
-</svg>
-<strong class="fw-medium">+91 1234 567 890</strong></a>
+<a style="color: white;" href="tel:+916238669487"> <svg width="16" height="16" viewBox="0 0 24 24"
+                fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6.62 10.79a15.05 15.05 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.24c1.12.37 2.33.57 3.54.57a1 1 0 011 1v3.5a1 1 0 01-1 1C10.07 21 3 13.93 3 5.5a1 1 0 011-1H7.5a1 1 0 011 1c0 1.21.2 2.42.57 3.54a1 1 0 01-.24 1.05l-2.2 2.2z" />
+              </svg>
+              <strong class="fw-medium">+91 62 38669 487</strong></a>
           </p>
          
 
