--- a/backend/views/user/contact.ejs
+++ b/backend/views/user/contact.ejs
@@ -434,7 +434,7 @@
     <section class="google-map mb-5">
       <h2 class="d-none">Contact US</h2>
       <div  class="google-map__wrapper">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d251479.49760895962!2d76.13696292878984!3d9.9864998960076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080d514abec6bf%3A0xbd582caa5844192!2sKochi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1753637394193!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.481687723585!2d76.97467127477093!3d8.45244859774787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbfd941da51d%3A0x333e11042d1b64d!2sSTAYRARE!5e0!3m2!1sen!2sin!4v1755709933546!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
@@ -442,7 +442,7 @@
       <div class="">
  <div class="contact-wrapper-main">
         <div class="contact-container-primary">
-            <h1 class="contact-header-title">Contact Information</h1>
+            <h1 class="contact-header-title gradient-text text-uppercase">Contact Information</h1>
             <p class="contact-subtitle-desc">Get in touch with us for any inquiries — we're here to help!</p>
             
             <div class="contact-grid-layout d-flex justify-content-around flex-wrap">
