--- a/backend/views/user/order-confirmation.ejs
+++ b/backend/views/user/order-confirmation.ejs
@@ -978,7 +978,7 @@
   <div id="scrollTop" class="visually-hidden end-0"></div>
 
   <!-- Page Overlay -->
-  <div class="page-overlay"></div><!-- /.page-overlay -->
+  <div class="page-overlay"></div>
 
   <!-- External JavaScripts -->
   <script src="js/plugins/jquery.min.js"></script>
